# backend-rails/config/routes.rb
@@ -18,6 +18,8 @@ Rails.application.routes.draw do
       post 'admin/elections/:election_id/contests', to: 'admin/contests#create'
       post 'admin/elections/:election_id/voting-devices', to: 'admin/voting_devices#create'
       post 'admin/rounds/:id/open', to: 'admin/rounds#open'
+      post 'admin/rounds/:id/suspend', to: 'admin/rounds#suspend'
+      post 'admin/rounds/:id/resume', to: 'admin/rounds#resume'
       post 'admin/rounds/:id/close', to: 'admin/rounds#close'
       post 'voting-device/pair', to: 'voting_device#pair'
       get 'voting-device/state', to: 'voting_device#state'
